fixd caret jumpling, improved some styles

--- a/example/assets/demo.css
+++ b/example/assets/demo.css
@@ -62,17 +62,11 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-.ce-example__content--small {
+.thin-mode .ce-example__content {
   max-width: 500px;
   border-left: 1px solid #eee;
   border-right: 1px solid #eee;
   padding: 0 15px;
-}
-
-.ce-example__content--with-bg {
-  background: #f4f4f4;
-  max-width: none;
-  margin-top: -30px;
 }
 
 .ce-example__output {
@@ -127,29 +121,46 @@ body {
 }
 
 .ce-example__statusbar {
+  display: flex;
+  align-items: center;
   position: fixed;
-  bottom: 10px;
-  right: 10px;
+  bottom: 0;
+  right: 0;
+  left: 0;
   background: #fff;
-  border-radius: 8px;
+  border-radius: 8px 8px 0 0;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.18);
-  font-size: 12px;
+  font-size: 13px;
   padding: 8px 15px;
   z-index: 1;
 }
 
+.ce-example__statusbar-item:not(:last-of-type)::after {
+  content: '|';
+  color: #ddd;
+  margin: 0 15px 0 12px;
+}
+
 .ce-example__statusbar-button {
-  display: inline-flex;
-  margin-left: 10px;
-  background: #4A9DF8;
-  padding: 6px 12px;
-  box-shadow: 0 7px 8px -4px rgba(137, 207, 255, 0.77);
+  display: inline-block;
+  padding: 3px 12px;
   transition: all 150ms ease;
   cursor: pointer;
   border-radius: 31px;
-  color: #fff;
-  font-family: 'PT Mono', Menlo, Monaco, Consolas, Courier New, monospace;
+  background: #eff1f4;
   text-align: center;
+  user-select: none;
+}
+
+.ce-example__statusbar-button:hover {
+  background: #e0e4eb;
+}
+
+.ce-example__statusbar-button-primary {
+  background: #4A9DF8;
+  color: #fff;
+  box-shadow: 0 7px 8px -4px rgba(137, 207, 255, 0.77);
+  font-family: 'PT Mono', Menlo, Monaco, Consolas, Courier New, monospace;
 }
 
 @media all and (max-width: 730px){
@@ -178,20 +189,8 @@ body {
   color: rgb(247, 60, 173);
 }
 
-.ce-example .ce-block:first-of-type h2.ce-header{
+.ce-example .ce-block:first-of-type h1.ce-header{
   font-size: 50px;
-}
-
-.ce-example h2.ce-header{
-  font-size: 30px;
-}
-
-.ce-example h3.ce-header {
-  font-size: 24px;
-}
-
-.ce-example h4.ce-header {
-  font-size: 18px;
 }
 
 .ce-example-multiple {
@@ -205,4 +204,24 @@ body {
   background: #fff;
   border-radius: 7px;
   padding: 30px;
+}
+
+.show-block-boundaries .ce-block {
+  box-shadow: inset 0 0 0 1px #eff2f5;
+}
+
+.show-block-boundaries .ce-block__content {
+  box-shadow: 0 0 0 1px rgba(224, 231, 241, 0.61) inset;
+}
+.show-block-boundaries #showBlocksBoundariesButton span,
+.thin-mode #enableThinModeButton span {
+  font-size: 0;
+  vertical-align: bottom;
+}
+
+.show-block-boundaries #showBlocksBoundariesButton span::before,
+.thin-mode #enableThinModeButton span::before {
+  content: attr(data-toggled-text);
+  display: inline;
+  font-size: 13px;
 }
